@@ -43,6 +43,8 @@ sourceSets {
 
 test {
     useJUnitPlatform()
+run {
+    jvmArgs = ['--add-exports=javafx.base/com.sun.javafx.event=ALL-UNNAMED']
 }
 
 dependencies {
@@ -90,6 +92,9 @@ dependencies {
     implementation 'org.usb4java:usb4java:1.3.0'
     implementation 'org.usb4java:usb4java-javax:1.3.0'
     implementation 'pl.edu.icm:JLargeArrays:1.6'
+    
+    // SDRplay support
+    implementation 'io.github.sammy1am:SDRplayJava:0.6.0'
 
     //These must remain as compile options to ensure they are included in the build to produce multi-OS images
     compile "org.openjfx:javafx-base:15:win"
